src/pages/Project/Modal/styles.module.css
.page {
  padding: 0 20px 20px;
  box-sizing: border-box;
}

.closeButtonContainer {
  text-align: right;
  margin-bottom: 10px;
  padding-top: 4px;
}

.closeButton {
  color: var(--charcoal);
  font-size: 50px;
  transition: filter 0.5s;
  font-weight: 600;
}

.closeButton:hover {
  filter: brightness(1.5);
}

@media (max-width: 380px) {
  .title {
    font-size: 35px;
  }
}

